# logger

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
src/: CMakeLists.txt  logger.cpp  logger.hpp
src/cmake/: logger-config.cmake.in
tests/: CMakeLists.txt  test_logger.cpp
