CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(logger)

SET(CMAKE_POSITION_INDEPENDENT_CODE ON) 

AUX_SOURCE_DIRECTORY(. CURRENT_DIR_SRCS)
ADD_LIBRARY(module_logger ${CURRENT_DIR_SRCS})
TARGET_LINK_LIBRARIES(module_logger PRIVATE
	glog::glog
)

FILE(MAKE_DIRECTORY ${PROJECT_INCLUDE_DIR}/logger)
FILE(GLOB_RECURSE CURRENT_DIR_HEAD ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
FOREACH(include ${CURRENT_DIR_HEAD})
	MESSAGE("-- Copying ${include}")
	CONFIGURE_FILE(${include} ${PROJECT_INCLUDE_DIR}/logger COPYONLY)
ENDFOREACH()
