CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(Tests)

SET(DEPENDENCY_INCLUDES
    ${PROJECT_INCLUDE_DIR}
)

SET(DEPENDENCY_LIBS
    logger::logger
    glog::glog
    GTest::gtest
    GTest::gtest_main
)

FILE(GLOB CURRENT_DIR_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/*.cc)

MESSAGE(STATUS "APP SOURCES: ${CURRENT_DIR_SRCS}")

FILE(MAKE_DIRECTORY ${PROJECT_OUTPUT_DIR}/bin/tests)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_OUTPUT_DIR}/bin/tests)

ADD_EXECUTABLE(main ${CURRENT_DIR_SRCS})
TARGET_INCLUDE_DIRECTORIES(main PRIVATE ${DEPENDENCY_INCLUDES})
TARGET_LINK_LIBRARIES(main PRIVATE ${DEPENDENCY_LIBS})
INSTALL(TARGETS main DESTINATION tests)
